[package]
name = "nutek-cipher"
version = "0.3.0"
edition = "2021"
categories = ["command-line-interface"]
description = "Encrypt and decrypt files and text"
license = "MIT"
repository = "https://github.com/nutek-terminal/nutek-cipher"
authors = ["Szymon Błaszczyński <museyoucoulduse@gmail.com>"]
readme = "README.md"
keywords = ["crypto", "cipher", "encryption", "decryption", "command line utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm-siv = "0.11.1"
rand = "0.8.5"
clap = { version = "4.1.4", features = ["derive"] }
rpassword = "7.2"
hex = "0.4.3"