[package]
name = "nutek-cipher"
version = "0.3.5"
edition = "2021"
categories = ["command-line-interface"]
description = "Encrypt and decrypt files and text"
license-file = "LICENSE"
repository = "https://github.com/nutek-terminal/nutek-cipher"
authors = ["Szymon Błaszczyński <museyoucoulduse@gmail.com>"]
readme = "README.md"
keywords = ["crypto", "encryption", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm-siv = "0.11.1"
rand = "0.8.5"
clap = { version = "4.1.4", features = ["derive"] }
rpassword = "7.2"
hex = "0.4.3"